src/main/k8s/jhipster-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker/app.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: jhipster-registry
  name: jhipster-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jhipster-registry
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker/app.yml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: jhipster-registry
    spec:
      containers:
      - env:
        - name: JHIPSTER_REGISTRY_PASSWORD
          value: admin
        - name: SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_SEARCH_LOCATIONS
          value: file:./central-config/localhost-config/
        - name: SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_TYPE
          value: native
        - name: SPRING_PROFILES_ACTIVE
          value: dev,api-docs,oauth2
        - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI
          value: http://keycloak:9080/auth/realms/jhipster
        - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID
          value: jhipster-registry
        - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET
          value: jhipster-registry
        - name: SPRING_SECURITY_USER_PASSWORD
          value: admin
        - name: _JAVA_OPTIONS
          value: -Xmx512m -Xms256m
        image: jhipster/jhipster-registry:v6.7.1
        imagePullPolicy: ""
        name: jhipster-registry
        ports:
        - containerPort: 8761
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
