src/main/k8s/jhipsterbugtrackerdemo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker/app.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: jhipsterbugtrackerdemo-app
  name: jhipsterbugtrackerdemo-app
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: jhipsterbugtrackerdemo-app
status:
  loadBalancer: {}
