src/main/k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker/keycloak-prod.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
  - name: "9080"
    port: 9080
    targetPort: 9080
  - name: "9443"
    port: 9443
    targetPort: 9443
  - name: "10990"
    port: 10990
    targetPort: 10990
  selector:
    io.kompose.service: keycloak
status:
  loadBalancer: {}
