src/main/k8s/jhipsterbugtrackerdemo-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: jhipsterbugtrackerdemo-app
    annotations:
        # If the class annotation is not specified it defaults to "gce".
        kubernetes.io/ingress.class: "gce"
spec:
    rules:
        - http:
              paths:
                  - path: /*
                    backend:
                        serviceName: jhipsterbugtrackerdemo-app
                        servicePort: 8080
