src/main/k8s/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: keycloak
    annotations:
        # If the class annotation is not specified it defaults to "gce".
        kubernetes.io/ingress.class: "gce"
spec:
    rules:
        - http:
              paths:
                  - path: /*
                    backend:
                        serviceName: keycloak
                        servicePort: 8761
